@@ -147,6 +147,7 @@ response_invoke_processor(struct request *request2,
     processor_env_init(request->pool, &request2->env,
                        transformation->u.processor.domain,
                        request->remote_host,
+                       request->uri,
                        request_absolute_uri(request),
                        &request2->uri,
                        request2->args,
